--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -227,6 +227,17 @@
     height: 0
 }
 
+.account{
+    font-size: 20px;
+    text-transform: capitalize;
+    font-weight: 600;
+    padding-right: 50px;
+}
+
+.account a{
+    color: #fff !important;
+}
+
 @media only screen and (max-width: 767px) {
     .chat-app .people-list {
         height: 465px;
