--- a/app/views/navigation/_nav.html.erb
+++ b/app/views/navigation/_nav.html.erb
@@ -6,16 +6,24 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Messages <span class="sr-only">(current)</span></a>
-      </li>
+    
     </ul>
      <div class="my-2">
      <ul class="navbar-nav mr-auto container">
-     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+     <li class="nav-item dropdown account">
+     
+     <% if user_signed_in? %>
+     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= current_user.username%>
+      </a>
+
+        <% else %>
+       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Account
-        </a>
+      </a>
+     <% end %>
+     
+        
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
@@ -25,7 +33,12 @@
       </li>
 
       <li class="nav-item dropdown">
-       <button class="btn btn-primary">Log in</button>
+      <% if user_signed_in? %>
+        <%= link_to 'Log Out',  destroy_user_session_path, class: "btn btn-primary" %>
+        <% else %>
+     <%= link_to 'Log in',   new_user_session_path, class: "btn btn-primary" %>
+      <% end %>
+       
       </li>
      </ul>
       
