--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="chat-history">
-                    <ul class="m-b-0">
+                    <ul class="m-b-0" id="messsage-container">
                       <% @messages.each do |message| %>
                       <li class="clearfix">
                             <div class="message-data">
